fix tab align

--- a/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
+++ b/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
@@ -33,14 +33,14 @@
   }
 }
 
-::ng-deep [icc-align-tabs="start"] > .icc-mdc-tab-header {
+::ng-deep [icc-align-tabs="start"] > .icc-mdc-tab-header .icc-mdc-tab-label-container {
   justify-content: start;
 }
 
-::ng-deep [icc-align-tabs="center"] > .icc-mdc-tab-header {
+::ng-deep [icc-align-tabs="center"] > .icc-mdc-tab-header .icc-mdc-tab-label-container {
   justify-content: center;
 }
 
-::ng-deep [icc-align-tabs="end"] > .icc-mdc-tab-header {
+::ng-deep [icc-align-tabs="end"] > .icc-mdc-tab-header .icc-mdc-tab-label-container {
   justify-content: end;
 }
